--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html {
 body{
   font-family: "Montserrat","Helvetica Neue",Arial,"Hiragino Kaku Gothic ProN","Hiragino Sans",Meiryo,sans-serif;
   line-height: 1.7;
-  color: #432;
+  color: #333;
 }
 a {
   text-decoration: none;
@@ -25,13 +25,13 @@ img {
   padding: 90px 0;
 }
 .section:nth-of-type(odd) {
-  background-color: #f7f7f7;
+  background-color: #faf5eb;
 }
 /*--------------------------------
  大きな背景画像
 ------------------------------- */
 .big-bg {
-  background-size: cover;
+  background-size: 85vh;
   background-position: center top;
   background-repeat: no-repeat;  
 }
@@ -192,6 +192,25 @@ img {
 }
 .contact-text {
   margin-top: 10px;
+}
+/*----botton*/
+
+.btn-square-so-pop {
+  position: relative;
+  display: inline-block;
+  padding: 0.25em 0.5em;
+  text-decoration: none;
+  color: #fff;
+  background: #0bd;/*色*/
+  border-radius: 4px;/*角の丸み*/
+  box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(0, 0, 0, 0.05);
+  font-weight: bold;
+  border: solid 2px #0bd;/*線色*/
+}
+
+.btn-square-so-pop:active {
+  /*押したとき*/
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
 }
 /*--------------------------------
  フッター
