--- a/www/html/css/style.css
+++ b/www/html/css/style.css
@@ -133,21 +133,15 @@ img {
 /*--------------------------------
  WORK-PAGE
 ------------------------------- */
+article {
+  width: 78%;
+  text-align: center;
+}
 .work-pagetop {
 margin-top: 20%;
 }
-.work-page-title {
-text-align: center;
-}
-.work-content img{
-display: flex;
-
-width: 600px;
+article .work-content {
 margin: 10%; 
- 
-}
-.work-comment {
-  text-align: center;
 }
 /*--------------------------------
  SKILL
@@ -181,21 +175,36 @@ margin: 10%;
  Profile
 ---------------------------------*/
 .profile {
-  display: flex;
+  text-align: center;
   flex-wrap: wrap;
   margin: 0 auto;
-  padding: 90px 4%;
+}
+.profile-name {
+font-size: 24px;  
+margin-bottom: 48px;
 }
 .profile-img {
-  width: 20%;
-  margin-right: 30px;
-  border-radius: 50%;
+float: right;
+width: 20%;
+
 }
 .profile-img img {
   border-radius: 50%;
 }
-.profile-body {
-  flex: 1;
+.profile-about-item {
+  display: flex;
+  margin-bottom: 24px;
+  text-align: left;
+}
+.profile-about-head {
+  flex: 0 0 30%;
+  text-align: right;
+}
+.profile-about-body {
+  margin-right: auto;
+  padding-left: 20px;
+  flex: 0 1 100%;
+  width: 1px;
 }
 .profile-body p:not(:last-child) {
   margin-bottom: 30px;
@@ -212,25 +221,7 @@ margin: 10%;
 .contact-text {
   margin-top: 10px;
 }
-/*----botton*/
 
-.btn-square-so-pop {
-  position: relative;
-  display: inline-block;
-  padding: 0.25em 0.5em;
-  text-decoration: none;
-  color: #fff;
-  background: #0bd;/*色*/
-  border-radius: 4px;/*角の丸み*/
-  box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(0, 0, 0, 0.05);
-  font-weight: bold;
-  border: solid 2px #0bd;/*線色*/
-}
-
-.btn-square-so-pop:active {
-  /*押したとき*/
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
-}
 /*--------------------------------
  フッター
 ---------------------------------*/
