--- a/www/html/css/style.css
+++ b/www/html/css/style.css
@@ -134,16 +134,29 @@ img {
  WORK-PAGE
 ------------------------------- */
 article {
-  width: 100%;
+  width: 100％;
   text-align: center;
   padding: 138px 0 50px;
 }
-.work-pagetop {
+.work-page-title {
+  font-size: 1.6rem;
+    background: linear-gradient(transparent 50%, rgba(116, 174, 211, 0.5) 0%);
+    display: inline-block;
+    margin: 20px;
+}
+.work-content {
+margin: 5% 10%; 
+}
+.work-comment {
+  display: inline-block;
+  text-align: left;
+}
+.title-border {
+  display:inline-block;
+  border-bottom: 2px solid #0bd;
+  margin: 20px auto;
+}
 
-}
-article .work-content {
-margin: 10%; 
-}
 /*--------------------------------
  SKILL
 ------------------------------- */
