--- a/www/html/css/style.css
+++ b/www/html/css/style.css
@@ -137,6 +137,7 @@ article {
   width: 100％;
   text-align: center;
   padding: 138px 0 50px;
+  background-color: #faf5eb;
 }
 .work-page-title {
   font-size: 1.6rem;
