カラー変更

--- a/www/html/css/style.css
+++ b/www/html/css/style.css
@@ -85,7 +85,7 @@ img {
   color: #432;
 }
 .header-nav a:hover {
-  color: #0bd;
+  color: rgb(221, 209, 33);
 }
 /*--------------------------------
  メインビジュアル
@@ -96,7 +96,7 @@ img {
   justify-content: center;
   padding-bottom: auto;
   text-align: center;
-  padding: 98px 0 0 10px;
+  padding: 98px 0 0 10p;
 }
 .main-visual-inner {
   padding: 0 40px;
@@ -140,7 +140,7 @@ article {
 }
 .work-page-title {
   font-size: 1.6rem;
-  background: linear-gradient(transparent 50%, rgba(116, 174, 211, 0.5) 0%);
+  background: linear-gradient(transparent 50%, rgb(221, 209, 33) 0%);
   display: inline-block;
   margin: 20px;
 }
@@ -153,7 +153,7 @@ article {
 }
 .title-border {
   display:inline-block;
-  border-bottom: 2px solid #0bd;
+  border-bottom: 2px solid rgb(221, 209, 33);
   margin: 20px auto;
 }
 /*--------------------------------
